远程版优化保存标注逻辑
